--- a/homework1/package.json
+++ b/homework1/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -47,6 +49,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "2.3.2",
     "prop-types": "^15.7.2",
+    "react-redux": "^7.2.4",
     "react-window": "^1.8.6"
   }
 }
