--- a/homework1/package.json
+++ b/homework1/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
