--- a/homework1/package.json
+++ b/homework1/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
     "firebase": "^9.0.0",
